fix layout of slideshow at md size and clipping of alt-text for logo

--- a/webapp/client/app/main/main.styl
+++ b/webapp/client/app/main/main.styl
@@ -452,7 +452,8 @@ span#smallFontSM {
 }
 
 #slideShow {
-  height: 400px
+  height: 390px
+  width: 550px
   position: relative
   overflow: hidden
   background: color1
@@ -593,14 +594,12 @@ span#smallFontSM {
   height: 75px
   width: 105px
   bottom: 83%
-  left: 54%
+  left: 57%
   position: absolute
 }
 
-#logoText {
-  position: absolute
+.logoText {
+  margin-top: 5px
   color: color4
   font-family: 'Montserrat', sans-serif
-  left: 39%
-  bottom: 0
 }
